--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@stripe/stripe-js": "^1.15.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
+    "chart.js": "^3.2.1",
     "core-js": "^3.6.5",
     "mitt": "^2.1.0",
     "postcss": "^7.0.35",
@@ -18,7 +19,7 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.2.4",
     "vue-router": "^4.0.0-0",
-    "vuejs-overlay": "^0.0.28",
+    "vue3-chart-v2": "^0.8.2",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
