--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.15.0",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "chart.js": "^3.2.1",
